--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         }
     ],
     "require": {
-        "php": ">=7.4.0",
+        "php": "^7.3.0|^8.0",
         "ext-json": "*",
         "ext-mbstring": "*",
         "illuminate/console": "~8.0",
