--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
         "php": ">=7.4.0",
         "ext-json": "*",
         "ext-mbstring": "*",
-        "illuminate/console": "~8.0",
-        "illuminate/support": "~8.0"
+        "illuminate/console": ">=8.0",
+        "illuminate/support": ">=8.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~9.0"
